--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -13,12 +13,16 @@ block content
             if error
                 +alert(error, false, true)
 
+        if errors
+            +errors(errors)
+
         div(class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm")
-            form(class="space-y-6" action="#" method="POST")
+            form(class="space-y-6" action="/login" method="POST" novalidate)
+                input(type="hidden" name="_csrf" value=csrfToken)
                 div
                     label(for="email" class="block text-sm font-medium leading-6 text-gray-900") Email
                     div(class="mt-2")
-                        input#email(name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6")
+                        input#email(name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" value= user ? user.email : '')
                 div
                     div(class="flex items-center justify-between")
                         label(for="password" class="block text-sm font-medium leading-6 text-gray-900") Contraseña
