--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,4 +1,5 @@
 extends ../layouts/app
+include ../mixins/alerts
 
 block content
   div(class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8")
@@ -7,11 +8,7 @@ block content
             h2(class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900") Regístrate en Nolatech
 
         if errors
-            div(class="mt-4 sm:mx-auto sm:w-full sm:max-w-sm")
-                div(class="text-red-600 text-sm")
-                    ul
-                        each error in errors
-                            li= error.msg
+            +errors(errors)
 
         div(class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm")
             form(class="space-y-6" action="/register" method="POST" novalidate)
