--- a/views/mixins/alerts.pug
+++ b/views/mixins/alerts.pug
@@ -11,4 +11,18 @@ mixin alert(message, success, error)
             div(class="ml-3")
                 p(class=success ? 'text-green-800' : 'text-red-800').text-center.text-sm.font-medium= message
 
+mixin errors(errors)
+    div(class="mt-4 sm:mx-auto sm:w-full sm:max-w-sm")
+        div(class="rounded-md bg-red-50 p-4")
+            div(class="flex")
+                div(class="flex-shrink-0")
+                    svg(class="h-5 w-5 text-red-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true")
+                        path(fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.28 7.22a.75.75 0 00-1.06 1.06L8.94 10l-1.72 1.72a.75.75 0 101.06 1.06L10 11.06l1.72 1.72a.75.75 0 101.06-1.06L11.06 10l1.72-1.72a.75.75 0 00-1.06-1.06L10 8.94 8.28 7.22z" clip-rule="evenodd")
+                div(class="ml-3")
+                    h3(class="text-sm font-medium text-red-800") Hay errores en tu formulario
+                    div(class="mt-2 text-sm text-red-700")
+                        ul(role="list" class="list-disc space-y-1 pl-5")
+                            each error in errors
+                                li= error.msg
+
 
